# VulkanErruption

./: .gitignore  .vscodeignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build.ps1  main.yml
VulkanErruption/: CudaPointRenderObject.h  DynamicPointRenderObject.h  HelloTriangleApplication.cpp  HelloTriangleApplication.h  ParticleRenderer.h  RenderObject.h  StaticPointRenderObject.h  TwoPointMovingRenderObject.h  Vertex.h  VukanTwoVertexCubeShader.h  VulkanArray3DShader.h  VulkanCudaPointRenderObject.cpp  VulkanCudaPointRenderObject.h  VulkanDynamicPointRenderObject.cpp  VulkanDynamicPointRenderObject.h  VulkanErruption.sln  VulkanErruption.vcxproj  VulkanErruption.vcxproj.filters  VulkanGrid2DLightingShader.h  VulkanGrid2DShader.h  VulkanParticleRenderer.cpp  VulkanParticleRenderer.h  VulkanStaticPointRenderObject.cpp  VulkanStaticPointRenderObject.h  VulkanTwoPointMovingRenderObject.cpp  VulkanTwoPointMovingRenderObject.h  VulkanVertexCubeShader.h  WindowsSecurityAttributes.h  glfwFPS.h  main.cpp  upGLFWWindow.h
VulkanErruption/include/: Array3DShader.h  CudaPointRenderObject.h  CudaVertexBuffer.h  DynamicPointRenderObject.h  Event.h  Grid2DLightingShader.h  Grid2DShader.h  ParticleRenderer.h  StaticPointRenderObject.h  TwoPointMovingRenderObject.h  TwoVertexCubeShader.h  VertexCubeShader.h
VulkanErruption/include_advanced/: VulkanCudaPointRenderObject.cpp  VulkanParticleRenderer.h
VulkanErruption/shaders/: array3D_cube_specular.geom  compile.bat  compile.ps1  cube.geom  cube.vert  cube_specular.geom  cube_v1.geom  dynamic.vert  dynamic_vert_spv.h  frag_spv.h  index_logo.vert  index_logo_vert_spv.h  shader.vert  specular.frag  vec3.vert  vec3_vert_spv.h  vert_spv.h
VulkanErruption/shaders/src/: array3D_cube.vert  dynamic.vert  shader.vert  two_vertex_cube.vert  two_vertex_cube_specular.geom
VulkanErruption/shaders/src/Grid2D/: Grid2D.frag  Grid2D.geom  Grid2D.vert  Grid2D_gouraud.geom
VulkanErruption/shaders/src/Grid2DLighting/: Grid2DLighting.geom  Grid2DLighting.vert
VulkanErruption/shaders/src/VertexCube/: cube.geom  cube_specular.geom
VulkanErruptionCudaTest/: VulkanErruptionCudaTest.vcxproj  main.cpp
VulkanErruptionTest/: VulkanErruptionTest.vcxproj  test.cpp
app/: CMakeLists.txt  main.cpp  main2.cpp  main3.cpp
app/VulkanErruptionTest/: test.cpp
ducumentation/: component diagram 2.drawio  component diagram.drawio
scripts/: build_debug.ps1
shaders/source/: array3D_cube.geom  simple_shader.frag  simple_shader.vert
shaders/source/Grid2D/: Grid2D.vert
shaders/source/advanced_shader/: advanced_shader_diffuse.frag  advanced_shader_diffuse.vert  advanced_shader_none.frag  advanced_shader_none.vert
shaders/source/cube_array_shader/: cube_array_shader.frag  cube_array_shader.geom  cube_array_shader.vert
shaders/source/cube_shader/: cube_shader.frag  cube_shader.geom  cube_shader.vert
shaders/source/vertex_cube/: cube.vert
shaders/src/: array3D.vert
shaders/src/Grid2D/: Grid2D.geom
source/: include_glm.h
source/event/: delegate.h  event.h  type_traits_function_pointer.h
source/event/tests/: CMakeLists.txt  test_delegate.cpp  tests_event.cpp
source/vulkan_erruption/: CudaPointRenderObject2.h  DynamicPointRenderObject.h  vulkan_erruption.h
source/vulkan_erruption/components/: advanced_command_buffer.h  advanced_pipeline.h  advanced_vertex_buffer.h  simple_command_buffer.h  simple_descriptor_pool.h  simple_descriptor_set_layout.h  simple_descriptor_sets.h  simple_pipeline.h  simple_uniform_buffer.h  simple_vertex_buffer.h
source/vulkan_erruption/details/: File.h  VulkanParticleRenderer.cpp
source/vulkan_erruption/object/dynamic_point_object/: dynamic_point_object.cpp  dynamic_point_object.h  dynamic_point_object_shader.h
source/vulkan_erruption/object/dynamic_point_object_3/: dynamic_point_object 2.h  dynamic_point_object 3.h  dynamic_point_shader.h
source/vulkan_erruption/object/simple_object/: hello_triangle.cpp  hello_triangle.h  hello_triangle_shader.h
source/vulkan_erruption/render_engine/: render_engine.cpp  render_engine.h  vulkan_render_engine.h
source/vulkan_erruption/shader/: advanced_shader.cpp  advanced_shader.h  cube_array_shader.cpp  cube_array_shader.h  cube_shader.cpp  cube_shader.h  simple_shader.cpp  simple_shader.h
source/vulkan_erruption/shader/vertex_cube_shader/: vertex_cube_shader.cpp  vertex_cube_shader.h
source/vulkan_erruption/shader_data/: model_view_proj_uniform.h  no_storage.h  pos_color_vertex.h
source/vulkan_erruption/shader_object/: render_engine_interface.h  shader_object.h  vulkan_render_engine_interface.h
source_old/vulkan_erruption/: Array3DShader.h  Key.h  ParticleRenderer.h  TwoVertexCubeShader.h  placeholder.cpp
source_old/vulkan_erruption/details/: VulkanDynamicPointRenderObject.h  VulkanGrid2DLightingShader.h  VulkanStaticPointRenderObject.h  VulkanTwoPointMovingRenderObject.h  VulkanVertexCubeShader.h
